--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react": "^17.0.21",
     "next": "11.1.2",
+    "prismic-dom": "^2.2.6",
+    "prismic-javascript": "^3.0.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
+    "@types/prismic-dom": "^2.1.1",
+    "@types/styled-components": "^5.1.14",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2"
   }
