--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/react": "^17.0.21",
     "next": "11.1.2",
+    "nookies": "^2.5.2",
     "prismic-dom": "^2.2.6",
     "prismic-javascript": "^3.0.2",
     "react": "17.0.2",
