--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prismic-javascript": "^3.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "sharp": "^0.29.1",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
