--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/prismic-dom": "^2.1.1",
     "@types/styled-components": "^5.1.14",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2"
+    "eslint-config-next": "11.1.2",
+    "typescript": "^4.4.4"
   }
 }
